# Projekt-3

Project3/: CMakeLists.txt  Hearing_aid.cpp  Hearing_aid.h  battery.cpp  battery.h  container.cpp  container.h  electronic_device.cpp  electronic_device.h  element.cpp  element.h  main.cpp  parameters.cpp  parameters.h  phone.cpp  phone.h  smartphone.cpp  smartphone.h  user.cpp  user.h
build-Project3-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  file.txt
build-Project3-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-5bcd006571201d636ff1.json  cmakeFiles-v1-b0a8a87416f143d760f0.json  codemodel-v2-c2f0f703bd27a95af572.json  codemodel-v2-d78e87d1149488ba6818.json  codemodel-v2-d9881635fe64d01016c4.json  index-2021-05-18T06-56-31-0781.json  index-2021-05-22T06-18-28-0614.json  index-2021-05-28T13-49-15-0058.json  target-Project3-Debug-27028c7e853f2baf6c55.json  target-Project3-Debug-4bc2d15149ba9356249f.json  target-Project3-Debug-4e334ef38d81612ede0d.json
